--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                             <h4>Music bot</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/msplay.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/kU1eYzo.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="bot">
@@ -156,7 +156,7 @@
                             <h4>Giveaway bot</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/giveaway.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/BlxZzpE.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="bot">
@@ -165,7 +165,7 @@
                             <h4>Information bot</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/info.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/uDVWBEJ.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="bot">
@@ -174,7 +174,7 @@
                             <h4>Announce bot</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/announce.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/BJrrRam.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="bot">
@@ -183,7 +183,7 @@
                             <h4>Ticket bot</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/ticketbot.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/vhzcfOA.gif" alt="project">
                     </div>
                 </div>
 
@@ -193,7 +193,7 @@
                             <h4>Play videos/gifs plugin</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/gifsplugin.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/tAQIMJF.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="plugin">
@@ -202,7 +202,7 @@
                             <h4>Luckblock plugin</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/st-luckyblock.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/RLLMQUD.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="plugin">
@@ -211,7 +211,7 @@
                             <h4>Drops plugin</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/st-sell.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/Y1IELt2.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="plugin">
@@ -220,7 +220,7 @@
                             <h4>Quiz plugin</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/quiz.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/c6Z04DI.gif" alt="project">
                     </div>
                 </div>
 
@@ -230,7 +230,7 @@
                             <h4>Bans plugin with android integration</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/stbans.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/RMFjgOX.gif" alt="project">
                     </div>
                 </div>
                 <div class="col-md-4 project-item" data-id="app">
@@ -248,7 +248,7 @@
                             <h4>Bot with android integration</h4>
                             <p>Click to open</p>
                         </div>
-                        <img class="item" src="images/botapp.gif" alt="project">
+                        <img class="item" src="https://i.imgur.com/VewxbtQ.gif" alt="project">
                     </div>
                 </div>
             </div>
