--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
 
-                <img class="image" src="images/IMG_20210729_152344.jpg" alt="Me">
+                <img class="image" src="images/logo.png" alt="Me">
             </div>
 
             <div class="home-button-center">
@@ -56,7 +56,7 @@
                     the future.
                     <br>
                     <br>
-                    I aways try to keep my code clean, readable and
+                    I always try to keep my code clean, readable and
                     well refactored, delivering quality products to my customers.
 
                     <br>
